# Calculator-Parsing

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
flex/: a.out  flex.l  lex.yy.c  lex_funct.cpp  lex_lib.hpp  main.cpp  test.txt
flex/src/: Makefile  flex.l  lex.yy.c  lex_funct.cpp  lex_funct.hpp  lex_lib.hpp  main.cpp
shift-reduce/: Makefile  main.cpp  syntax_analyser.hpp
test/: err1.txt  err2.txt  test1.txt  test4.txt  test5.txt  test6.txt  test7.txt
